# polikit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: main.cpp  neigh_finder.cpp  nf.cpp  nf.h  poly_analysis.cpp  poly_analysis.h  tct.cpp
doc/: 0_update_log.md  1_TCT_analysis.md  2_ring_statistics.md  3_triangulation.md  4_dynamic_data.md  5_polyhedral_analysis.md
miscellanous/: tri.f90
src/: CMakeLists.txt  bad.f90  cluster.f90  control.f90  d2min.f90  data_input.f90  data_types.f90  delaunay.f90  dynamic_data.f90  flags.f90  ha.f90  init.f90  io.f90  main.f90  makefile  neigh_finder.f90  neigh_finder_old.f90  neighbor_finder.f90  nf.f90  parser.f90  polikit.f90  poly_analysis.f90  precision.f90  rdf.f90  ring_methods.f90  ring_test.f90  rings.f90  rings_.f90  rings_simple.f90  rsa_debug.f90  tct.f90  topo_analysis.f90
